[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Player/idle/AnimationHidleSheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Player/walk/GolemAnimationWalkSheet.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/jump/JumpAnimation.png" type="Texture" id=3]
[ext_resource path="res://scenes/entities/player/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/player/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/Kabra - goldenSOUND 2023-05-22 23_12.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/walkSoundGolem~1.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 135, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 45, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 45, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 135, 0, 45, 80 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13, 29.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12.6667, 28.6667 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_mask = 18
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 10 )

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 18
limit_top = -10000
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="TweenHurt" type="Tween" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="walk_sound" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 7 )
volume_db = -4.0
pitch_scale = 2.2
attenuation = 1.10957

[node name="Hurt_Sound" type="AudioStreamPlayer2D" parent="Node2D"]

[node name="Grounded" type="AudioStreamPlayer2D" parent="Node2D"]

[node name="water_sound" type="AudioStreamPlayer2D" parent="Node2D"]

[node name="rune_collected" type="AudioStreamPlayer2D" parent="Node2D"]

[node name="gold_collected" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 6 )
volume_db = -8.0
pitch_scale = 2.0
attenuation = 2.0

[connection signal="rune_speed" from="." to="." method="_on_Player_rune_speed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
